<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:id="@+id/ll_root"
    android:fitsSystemWindows="true"
    tools:context=".RtspActivity">

    <TextView
        android:id="@+id/tv_title"
        android:layout_width="match_parent"
        android:layout_height="160dp"
        android:background="@color/colorPrimaryDark"
        android:foreground="@color/white"
        android:gravity="center"
        android:text="VIP人脸识别通道"
        android:textColor="@color/gold"
        android:textSize="64sp"
        android:textStyle="bold" />

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <WebView
            android:id="@+id/webview"
            android:layout_width="600dp"
            android:layout_height="800dp"
            android:layout_gravity="center"></WebView>

        <!--<com.visitor.tengli.face.view.DiffuseView-->
        <!--android:id="@+id/diffuseView"-->
        <!--android:layout_width="500dp"-->
        <!--android:layout_height="500dp"-->
        <!--android:layout_gravity="center"-->
        <!--app:diffuse_color="@color/color_blue_light"-->
        <!--app:diffuse_coreColor="@color/color_blue"-->
        <!--app:diffuse_coreRadius="100"-->
        <!--app:diffuse_maxWidth="300"-->
        <!--app:diffuse_speed="5"-->
        <!--android:visibility="invisible"-->
        <!--app:diffuse_width="3" />-->

        <TextView
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="300dp"
            android:gravity="center"
            android:text="请将人脸放置识别区域"
            android:textColor="@color/color_green"
            android:textSize="32sp" />

        <ImageView
            android:layout_width="400dp"
            android:layout_height="400dp"
            android:layout_gravity="center"
            android:src="@mipmap/selection" />

        <ImageView
            android:id="@+id/iv_setting"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right|bottom"
            android:src="@mipmap/setting" />

        <RelativeLayout
            android:id="@+id/layout_password_container"
            android:layout_width="600dp"
            android:layout_height="630dp"
            android:layout_gravity="center"
            android:visibility="invisible"
            android:background="@color/color_translucent_70"
            android:paddingEnd="34dp"
            android:paddingStart="34dp"
            android:paddingTop="27dp"
            android:paddingBottom="34dp"
            >

            <TextView
                android:id="@+id/et_pwd"
                android:layout_width="match_parent"
                android:layout_height="69dp"
                android:padding="10dp"
                android:textSize="36sp"
                android:gravity="center"
                android:background="@color/white"/>

            <LinearLayout
                android:id="@+id/layout_key_i"
                style="@style/PasswordKeyboardLayoutStySmall"
                android:layout_marginTop="18dp"
                android:layout_marginStart="34dp"
                android:layout_below="@+id/et_pwd"
                >
                <TextView
                    style="@style/PasswordKeyboardStySmall"
                    android:text="@string/key_i"
                    />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/layout_key_ii"
                style="@style/PasswordKeyboardLayoutStySmall"
                android:layout_marginTop="18dp"
                android:layout_marginStart="10dp"
                android:layout_below="@+id/et_pwd"
                android:layout_toEndOf="@+id/layout_key_i"
                >
                <TextView
                    style="@style/PasswordKeyboardStySmall"
                    android:text="@string/key_ii"
                    />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/layout_key_iii"
                style="@style/PasswordKeyboardLayoutStySmall"
                android:layout_marginTop="18dp"
                android:layout_marginStart="10dp"
                android:layout_below="@+id/et_pwd"
                android:layout_toEndOf="@+id/layout_key_ii"
                >
                <TextView
                    style="@style/PasswordKeyboardStySmall"
                    android:text="@string/key_iii"
                    />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/layout_key_delete"
                style="@style/PasswordKeyboardLayoutStySmall"
                android:layout_marginTop="18dp"
                android:layout_marginStart="10dp"
                android:layout_below="@+id/et_pwd"
                android:gravity="center"
                android:layout_toEndOf="@+id/layout_key_iii"
                >
                <!--<TextView-->
                <!--style="@style/PasswordKeyboardStySmall"-->
                <!--android:textSize="20sp"-->
                <!--android:text="@string/key_delete"-->
                <!--/>-->
                <!---->
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@mipmap/ic_delete"/>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/layout_key_iv"
                style="@style/PasswordKeyboardLayoutStySmall"
                android:layout_marginTop="11dp"
                android:layout_marginStart="34dp"
                android:layout_below="@+id/layout_key_i"
                >
                <TextView
                    style="@style/PasswordKeyboardStySmall"
                    android:text="@string/key_iv"
                    />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/layout_key_v"
                style="@style/PasswordKeyboardLayoutStySmall"
                android:layout_marginTop="11dp"
                android:layout_marginStart="10dp"
                android:layout_below="@+id/layout_key_ii"
                android:layout_toEndOf="@+id/layout_key_iv"
                >
                <TextView
                    style="@style/PasswordKeyboardStySmall"
                    android:text="@string/key_v"
                    />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/layout_key_vi"
                style="@style/PasswordKeyboardLayoutStySmall"
                android:layout_marginTop="11dp"
                android:layout_marginStart="10dp"
                android:layout_below="@+id/layout_key_iii"
                android:layout_toEndOf="@+id/layout_key_v"
                >
                <TextView
                    style="@style/PasswordKeyboardStySmall"
                    android:text="@string/key_vi"
                    />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/layout_key_vii"
                style="@style/PasswordKeyboardLayoutStySmall"
                android:layout_marginTop="11dp"
                android:layout_marginStart="34dp"
                android:layout_below="@+id/layout_key_iv"
                >
                <TextView
                    style="@style/PasswordKeyboardStySmall"
                    android:text="@string/key_vii"
                    />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/layout_key_viii"
                style="@style/PasswordKeyboardLayoutStySmall"
                android:layout_marginTop="11dp"
                android:layout_marginStart="10dp"
                android:layout_below="@+id/layout_key_v"
                android:layout_toEndOf="@+id/layout_key_vii"
                >
                <TextView
                    style="@style/PasswordKeyboardStySmall"
                    android:text="@string/key_viii"
                    />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/layout_key_ix"
                style="@style/PasswordKeyboardLayoutStySmall"
                android:layout_marginTop="11dp"
                android:layout_marginStart="10dp"
                android:layout_below="@+id/layout_key_vi"
                android:layout_toEndOf="@+id/layout_key_viii"
                >
                <TextView
                    style="@style/PasswordKeyboardStySmall"
                    android:text="@string/key_ix"
                    />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/layout_key_x"
                style="@style/PasswordKeyboardLayoutStySmall"
                android:layout_height="219dp"
                android:layout_marginTop="11dp"
                android:layout_marginStart="11dp"
                android:paddingBottom="36dp"
                android:layout_below="@+id/layout_key_delete"
                android:layout_toEndOf="@+id/layout_key_vi"
                android:gravity="bottom|center_horizontal"
                >
                <TextView
                    style="@style/PasswordKeyboardStySmall"
                    android:text="@string/key_x"
                    />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/layout_key_confirm"
                style="@style/PasswordKeyboardLayoutStySmall"
                android:layout_width="450dp"
                android:layout_marginTop="10dp"
                android:layout_marginStart="34dp"
                android:background="#005585"
                android:layout_alignParentBottom="true"
                android:layout_alignEnd="@+id/layout_key_delete">
                <TextView
                    style="@style/PasswordKeyboardStySmall"
                    android:textSize="36sp"
                    android:text="@string/key_confirm"
                    />
            </LinearLayout>


        </RelativeLayout>

        <FrameLayout
            android:id="@+id/rl_face_root"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="120dp"
            android:layout_marginLeft="100dp"
            android:layout_marginRight="100dp"
            android:layout_marginTop="60dp"
            android:visibility="invisible">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="#293d58"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_marginTop="10dp"
                    android:layout_weight="1"
                    android:background="#4d6ea1"
                    android:gravity="center">

                    <FrameLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@null">

                        <ImageView
                            android:layout_width="450dp"
                            android:layout_height="450dp"
                            android:layout_gravity="center"
                            android:src="@mipmap/scan_circle" />

                        <de.hdodenhof.circleimageview.CircleImageView
                            android:id="@+id/image_face"
                            android:layout_width="360dp"
                            android:layout_height="360dp"
                            android:layout_gravity="center" />
                    </FrameLayout>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight="1"></View>

                    <TextView
                        android:id="@+id/tv_vip_name"
                        android:layout_width="match_parent"
                        android:layout_height="46dp"
                        android:layout_above="@+id/tvopen"
                        android:layout_marginBottom="20dp"
                        android:gravity="center"
                        android:text="欢迎光临"
                        android:textColor="#ffffff"
                        android:textSize="40sp" />

                    <TextView
                        android:id="@+id/tvopen"
                        android:layout_width="match_parent"
                        android:layout_height="46dp"
                        android:layout_alignParentBottom="true"
                        android:layout_marginBottom="10dp"
                        android:gravity="center"
                        android:text="请通行"
                        android:textColor="#ffffff"
                        android:textSize="40sp" />

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight="1"></View>
                </LinearLayout>

            </LinearLayout>

            <ImageView
                android:id="@+id/imageview_openstate"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:scaleType="fitCenter"
                android:src="@mipmap/yz" />
        </FrameLayout>

    </FrameLayout>

    <TextView
        android:id="@+id/tv_state"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@color/colorPrimary"
        android:gravity="center"
        android:text="are you ok"
        android:textColor="@color/colorAccent" />

</LinearLayout>